--- a/index.html
+++ b/index.html
@@ -1,40 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>平均律ウェブアプリ</title>
+    <title>タッチで音を鳴らす</title>
     <style>
-        /* ... (既存のスタイル) ... */
-        #circle-container {
-            position: relative;
-            width: 300px;
-            height: 300px;
-            margin: 20px auto;
-        }
-        .note {
-            position: absolute;
-            width: 30px;
-            height: 30px;
-            border-radius: 50%;
-            text-align: center;
-            line-height: 30px;
-            cursor: pointer;
+        canvas {
+            border: 1px solid #000; /* Canvasの境界が見えるように */
         }
     </style>
-
 </head>
 <body>
-    <h1>平均律ウェブアプリ</h1>
-    <div id="controls">
-        <label for="division">分割数:</label>
-        <input type="number" id="division" min="1" max="36" step="1" value="12">
-        <button onclick="generateScale()">音階を生成</button>
-    </div>
-    <div id="notes"></div>
-    <div id="circle-container"></div>
-    <div id="frequencies"></div>
-
+    <canvas id="myCanvas" width="400" height="200"></canvas>
     <script src="script.js"></script>
 </body>
 </html>
